--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/icono.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galaxy Web</title>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="src/main.jsx"></script>
   </body>
 </html>
